--- a/src/Unify/WebBundle/Resources/views/Layout.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Layout.html.twig
@@ -48,12 +48,13 @@
             <div class="container">
                 <div class="cont-bot"></div>
                 <div class="social">
+                    <!--
                     <div id="face"><a href="http://www.facebook.com/group.php?gid=129632973725217&v=wall"><img src="images/facebook.png" alt="" /></a></div>
                     <div id="twitter"><a href="http://twitter.com/#!/wflashtemplate/"><img src="images/twitter.png" alt="" /></a></div>
                     <div id="youtube"><a href="http://www.youtube.com/user/WebFlashTemplateCom"><img src="images/youtube.png" alt="" /></a></div>
+                    -->
                 </div>
-                <div class="inside"> Copyright &copy; 2011. All right reserved. Image from BigStockPhoto.com &copy; Kurhan<br>
-                    More Templates <a href="http://www.cssmoban.com/" class="visit" target="_blank" title="模板之家">模板之家</a> Collect from <a href="http://www.cssmoban.com/" class="visit"title="网页模板" target="_blank">网页模板</a></div>
+                <div class="inside"> Copyright &copy; 2010-2013 Unify Medical Technology Co., Ltd All rights reserved<br></div>
             </div>
         </div>
 
