--- a/src/Unify/WebBundle/Resources/views/Page/contact.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Page/contact.html.twig
@@ -1,42 +1,34 @@
 {% extends "UnifyWebBundle::Layout.html.twig" %}
 {% block main %}
 <div class="container">
-   <!-- aside -->
-   <div class="aside">
-      <div class="inside">
-         <h2>Latest News</h2>
-         <ul class="news">
-            <li><a href="#">June 30, 2011</a><br>Duis sed elementum est. Quisque scelerisque felis gravida nisi posuere at vulputate felis scelerisque. Cras a nibh augue.</li>
-            <li><a href="#">June 14, 2011</a><br>Quisque lectus elit, pulvinar euismod blandit aliquet, euismod sit amet nibh. Aenean dapibus, odio eget egestas dapibus, purus velit aliquet leo, at condimentum risus lacus id eros.</li>
-            <li><a href="#">May 29, 2011</a><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget justo at ipsum imperdiet porta. Aenean non purus vel justo blandit vestibulum at in felis.</li>
-         </ul>
-      </div>
-   </div>
+   {% render "UnifyWebBundle:Widget:latestNews" with {'num': 3} %}
    <!-- content -->
    <div class="section" id="content">
       <h2>Contact Form</h2>
-      <form id="contacts-form" action="">
+      <p>{{ form_errors(form) }}</p>
+      <form id="contacts-form" method="post" action="{{ path('contact') }}" >
          <fieldset>
          <div class="field">
-            <label>Your Name:</label>
-            <input type="text">
+             <label><span style="color:red">*</span> Your Name:</label>
+             {{ form_widget(form.name) }}
+{{ form_errors(form.name) }}
          </div>
          <div class="field">
-            <label>Your E-mail:</label>
-            <input type="text">
+            <label><span style="color:red">*</span> Your E-mail:</label>
+            {{ form_widget(form.email) }}
+            {{ form_errors(form.email) }}
          </div>
          <div class="field">
-            <label>Your Website:</label>
-            <input type="text">
+            <label><span style="color:red">*</span> Your Message:</label>
+            {{ form_widget(form.content) }}
+            {{ form_errors(form.content) }}
+            {{ form_rest(form) }}
          </div>
-         <div class="field">
-            <label>Your Message:</label>
-            <textarea cols="1" rows="1"></textarea>
-         </div>
-         <div class="button"><strong><span><a href="#" onClick="document.getElementById('contacts-form').submit()">Send Your Message!</a></span></strong></div>
+            
+         <div class="button"><strong><span><a href="#" onClick="document.getElementById('contacts-form').submit(); return false;">Send Your Message!</a></span></strong></div>
          </fieldset>
       </form>
    </div>
-   <div class="clear"></div>
+   <div class="clear"></div>    
 </div>
 {% endblock %}
