--- a/src/Unify/WebBundle/Resources/views/Article/product_category.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Article/product_category.html.twig
@@ -1,12 +1,12 @@
 {% extends "UnifyWebBundle::Layout.html.twig" %}
 {% block main %}
 <div class="container">
-   {% render "UnifyWebBundle:Widget:latestNews" with {'num': 3} %}
+   {% render "UnifyWebBundle:Widget:categories"  %}
    <!-- content -->
    <div class="section" id="content">
       <ul class="sitemap">
-          {% for category in categories %}
-         <li><a href="{{ path('product_category', {'slug': category.slug}) }}">{{ category.name }}</a></li>
+          {% for product in products %}
+         <li><a href="{{ path('product', {'slug': product.slug}) }}">{{ product.title }}</a></li>
          {% endfor %}
       </ul>
    </div>
