--- a/src/Unify/WebBundle/Resources/views/Page/index.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Page/index.html.twig
@@ -7,29 +7,23 @@
     <div class="section" id="content">
         <div class="wrapper">
             <div class="article col-1">
-                <h2>Patient Quotes</h2>
-                <img src="images/1page-img.jpg" class="imgb" alt="" />
-                <p class="p1">MEDICAL CENTER Site is a free web template created by
-                    <strong>Web-Flash-Template.com</strong> team. This website template is
-                    optimized for 1024X768 screen resolution. It is also HTML5 &amp; CSS3
-                    valid.
+                <h2>About Us</h2>
+                <img src="/bundles/unifyweb/images/1page-img.jpg" class="imgb" alt="" />
+                <p class="p1">
+                    <strong>Unify Medical</strong> Technology Co., Ltd. was founded in Nanjing, China with the goal to supply medical products with high quality, competitive price and excellent after-sales service.
 
                 </p>
-                <p class="p0">This web template can be delivered in two packages -
-                    with PSD source files included and without them. If you need PSD
-                    source files, go to the template download page at Web-Flash-Template
-                    to leave the e-mail that you want the template ZIP package to be
-                    delivered to.</p>
+                <p class="p0">We welcome customers from all over the world visit our website or our company, and we assure you of our best quality products and services with competitive prices.Your cooperation with us will definitely create a win-win situation for both of us.</p>
             </div>
             <div class="article col-2">
-                <h2>Recent Articles</h2>
+                <h2>Products</h2>
                 <ul class="list">
-                    <li><strong>About This Template</strong>Free 1028X768 Optimized Website
-                        Template from <a href="http://www.cssmoban.com/" class="visit" target="_blank" title="模板之家">模板之家</a>!
-                        We hope that you like this template and will use for your websites.</li>
-                    <li><strong>Cardiology procedures</strong>Donec sed ante purus. Sed bibendum nulla et nisl aliquam at porttitor mauris feugiat. Etiam dignissim pellentesque hendrerit. </li>
-                    <li><strong>Dermatology surgery</strong>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque sagittis tortor eros. </li>
-                    <li><strong>Diabets clinic</strong>Nullam ac diam nisl, a consequat orci. Nunc faucibus diam ut mi sollicitudin a convallis nunc cursus. Cras adipiscing ligula vel orci convallis congue.</li>
+                    {% for product in products %}
+                    <li>
+                        <strong><a href="{{ path('product', {'slug': product.slug}) }}" target="_blank">{{ product.title }}</a></strong>
+                        {{ product.content|summary(150)}}
+                    </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
