--- a/src/Unify/WebBundle/Resources/public/css/style.css
+++ b/src/Unify/WebBundle/Resources/public/css/style.css
@@ -171,7 +171,9 @@ textarea {
     padding-bottom:5px;
 } 
 .list li a {
-    color: #000	;
+    color: #75dd12;
+    font-size: 14px;
+    text-decoration: none;
 }
 .list li a img {
     position:relative;
