--- a/src/Unify/WebBundle/Resources/public/css/layout.css
+++ b/src/Unify/WebBundle/Resources/public/css/layout.css
@@ -1,6 +1,6 @@
 /*======= index.html =======*/
 #page1 #content .col-1 {width:234px; margin-right:79px;}
-#page1 #content .col-2 { width:237px;}
+#page1 #content .col-2 { width:227px; padding-left: 10px;}
 
 
 /*=========================*/
