--- a/src/Unify/WebBundle/Resources/views/Layout.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Layout.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{%block title%}Unify Med{%endblock%}</title>
-        <meta name="description" content="{% block description %}Nanjing Unify Medical Equipment Co.,Ltd{% endblock %}" />
-        <meta name="keywords" content="{% block keywords %}Nanjing Unify Medical Equipment Co.,Ltd{% endblock %}" />
+        <title>{%block title%}Unify Medical {%endblock%}</title>
+        <meta name="description" content="{% block description %}Nanjing Unify Medical Equipment{% endblock %}" />
+        <meta name="keywords" content="{% block keywords %}Nanjing Unify Medical Equipment{% endblock %}" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         {% block css %}
             <link rel="shortcut icon" href="{# asset('/bundles/zuoweb/images/favicon.ico') #}" />  
