--- a/src/Unify/WebBundle/Resources/views/Article/news.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Article/news.html.twig
@@ -1,7 +1,7 @@
 {% extends "UnifyWebBundle::Layout.html.twig" %}
 {% block main %}
 <div class="container">
-   {% render "UnifyWebBundle:Widget:latestNews" with {'num': 3} %}
+   {% render "UnifyWebBundle:Widget:categories"  %}
    <!-- content -->
    <div class="section" id="content">
       <h2>{{ news.title }}</h2>
