--- a/src/Unify/WebBundle/Resources/views/Article/product_category.html.twig
+++ b/src/Unify/WebBundle/Resources/views/Article/product_category.html.twig
@@ -2,14 +2,21 @@
 {% block main %}
 <div class="container">
    {% render "UnifyWebBundle:Widget:categories"  %}
-   <!-- content -->
    <div class="section" id="content">
-      <ul class="sitemap">
-          {% for product in products %}
-         <li><a href="{{ path('product', {'slug': product.slug}) }}">{{ product.title }}</a></li>
-         {% endfor %}
-      </ul>
-   </div>
-   <div class="clear"></div>
+        <h2>Products</h2>
+        <ul class="list">
+                {% for product in pager if product.img %}
+                <li class="product_table">
+                    <a href="{{ path('product', {'slug': product.slug}) }}" target="_blank">
+                        <img target="_blank" title="{{ product.title }}" src="{{ product.getImgPath() }}" style="border:1px solid #000; margin-right: 20px; width:200px; height:100px;">
+                    </a>
+                    <p><a href="{{ path('product', {'slug': product.slug}) }}" title="{{ product.title }}" target="_blank">{{ product.title }}</a></p>
+                </li>
+               {% endfor %}
+        </ul>
+        <div class="clear"></div>
+        {{ pager.render()|raw }}
+    </div>
+    <div class="clear"></div>  
 </div>
 {% endblock %}
